--- a/PTT/res/layout/activity_login.xml
+++ b/PTT/res/layout/activity_login.xml
@@ -112,6 +112,7 @@
                 android:layout_marginLeft="30dp"
                 android:layout_marginRight="30dp"
                 android:layout_marginTop="60dp"
+                android:clickable="true"
                 android:background="@drawable/btn_login_selector"
                 android:text="Login"
                 android:textColor="#ffffff"
