--- a/PTT/res/layout/activity_task_monitor.xml
+++ b/PTT/res/layout/activity_task_monitor.xml
@@ -2,22 +2,41 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingTop="5dp" >
+    android:orientation="vertical">
+
+    <RelativeLayout
+            android:id="@+id/warning_task_list_null"
+            android:layout_width="fill_parent"
+            android:layout_height="40dp"
+            android:background="@color/yellow_warning"
+            android:clickable="true"
+            android:visibility="gone" >
+
+            <TextView
+                android:id="@+id/warning_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:background="@color/yellow_warning"
+                android:text="@string/task_list_null"
+                android:textColor="@color/yellow_font_color" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="5dp"
+                android:src="@drawable/arrow_right" />
+        </RelativeLayout>
 
     <com.cnx.ptt.chat.xlistview.MsgListView
-            android:id="@+id/listview"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:divider="@drawable/my_line_img"
-            android:cacheColorHint="@android:color/transparent"
-            android:fastScrollEnabled="true"
-            android:layout_marginTop="-3dp"
-            />
-    <ListView
         android:id="@+id/task_mornitor_list"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent" >
-    </ListView>
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="-3dp"
+        android:cacheColorHint="@android:color/transparent"
+        android:divider="@drawable/my_line_img"
+        android:fastScrollEnabled="true" />
 
 </LinearLayout>
