--- a/PTT/res/layout/custom_progress_dialog.xml
+++ b/PTT/res/layout/custom_progress_dialog.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@id/dialogRoot"
-    android:layout_width="wrap_content"
+    android:layout_width="200.0dip"
     android:layout_height="wrap_content"
-    android:layout_gravity="center_horizontal" >
+    android:layout_gravity="center_horizontal"
+    android:background="@drawable/dialog_bg" >
 
     <ProgressBar
         android:id="@+id/dialogMainIcon"
